# calldata-compressor-rs

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
src/: compressor.rs  errors.rs  lib.rs  utils.rs
test-data/: big_calldata.json  calldata.json  copy_compress.json  zero_compress.json
