[package]
name = "calldata-compressor"
version = "0.1.4"
edition = "2021"
description = "A Compression algorithm for EVM abi.encoded data, especially for EVM calldata"
license = "Apache-2.0"

[profile.dev]
panic = "unwind"
overflow-checks = false
debug = false

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = true
panic = "unwind"
overflow-checks = false

[dependencies]
ethers = "2.0.11"
num-bigint = "0.4.4"
rayon = "1.8.1"
serde_json = "1.0.111"
thiserror = "1.0.56"

[dev-dependencies]
hex = "0.4.3"
serde = "1.0.195"
serde_json = "1.0.111"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
int_plus_one = "allow"
needless_range_loop = "allow"
must_use_candidate = "allow"
