[package]
name = "calldata-compressor"
version = "0.3.0"
edition = "2021"
rust-version = "1.82.0"
description = "A Compression algorithm for EVM abi.encoded data, especially for EVM calldata"
license = "Apache-2.0"
exclude = ["test-data"]

[profile.dev]
panic = "unwind"
overflow-checks = false
debug = false

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "unwind"
overflow-checks = false

[dependencies]
alloy = "0.6.4"
num-bigint = "0.4.6"
rayon = "1.10.0"
serde_json = "1.0.133"
thiserror = "2.0.3"

[dev-dependencies]
hex = "0.4.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
int_plus_one = "allow"
needless_range_loop = "allow"
must_use_candidate = "allow"
